--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,30 @@
+@import "tailwindcss/preflight";
+@import "tailwindcss/utilities";
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+/* Optional: your global styles */
+body {
+  @apply text-gray-900 bg-white;
+}
+@theme {
+  /* Define your custom colors here */
+  --color-primary: hsl(150, 100, 15);
+  --color-primary2: rgba(109, 110, 113);
+  --color-primary3: rgba(241, 97, 33);
+  --color-secondary: rgba(34, 30, 31);
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+@keyframes slide-down {
+  from {
+    opacity: 0;
+    transform: translateY(-10px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
   }
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+.animate-slide-down {
+  animation: slide-down 0.2s ease-out;
 }
